# netkill

./: CMakeLists.txt
client/: main.cpp
cmake/: FindMsgPack.cmake
include/: defs.h
server/: main.cpp
